[workspace]
members = ["crates/pyth-client"]

resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.90.0"
authors = ["Calico Nino <caliconino@duck.com>"]
license = "MIT"
homepage = "https://github.com/CalicoNino/seawatch"
repository = "https://github.com/CalicoNino/seawatch"
description = "Seawatch — a Rust-based market data and analytics daemon for Pyth oracles."

[workspace.dependencies]
serde = { version = "1.0.228" }
serde_json = "1.0.145"
reqwest = "0.12.24"
url = "2.5.7"
strum = "0.27.2"
strum_macros = "0.27.2"
